force-app/main/default/objects/Import__c/Import__c.object-meta.xml
<CustomObject>
    <description>Fiche contact des vendeurs ou pour l&apos;import depuis des fichiers ou des sites externes</description>
    <label>Fiche contact (interne, externe)</label>
    <nameField>
        <displayFormat>IMP/{YYYY}/{0000000}</displayFormat>
        <label>Numéro d&apos;import</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fiches contact (interne, externe)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>