force-app/main/default/objects/Import__c/fields/aConfirmer__c.field-meta.xml
<CustomField>
    <fullName>aConfirmer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rendez-vous à confirmer</description>
    <label>A confirmer</label>
    <type>Checkbox</type>
</CustomField>