force-app/main/default/objects/Import__c/fields/adresseChantierExistante__c.field-meta.xml
<CustomField>
    <fullName>adresseChantierExistante__c</fullName>
    <formula>IF( 
OR( 
!ISBLANK(rueChantier__c), 
!ISBLANK(codePostalChantier__c), 
!ISBLANK(villeChantier__c), 
!ISBLANK(departementChantier__c), 
!ISBLANK(paysChantier__c)
), 
True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse chantier existante</label>
    <type>Checkbox</type>
</CustomField>