force-app/main/default/objects/Import__c/fields/adresseGeolocalisation__c.field-meta.xml
<CustomField>
    <fullName>adresseGeolocalisation__c</fullName>
    <description>CRM-477 : Gestion de sectorisation et hors secteur</description>
    <label>Adresse de géolocalisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>