force-app/main/default/objects/Import__c/fields/callSource__c.field-meta.xml
<CustomField>
    <fullName>callSource__c</fullName>
    <label>Source (Call)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>13 - ancien client</fullName>
            </value>
            <value>
                <fullName>13 - Bouche à oreille</fullName>
            </value>
            <value>
                <fullName>13 - enseigne magasin</fullName>
            </value>
            <value>
                <fullName>13 - NSPP</fullName>
            </value>
            <value>
                <fullName>13 - Panneaux de chantier</fullName>
            </value>
            <value>
                <fullName>13 - PJaune papier</fullName>
            </value>
            <value>
                <fullName>15 - Affichage</fullName>
            </value>
            <value>
                <fullName>15 - Batiweb</fullName>
            </value>
            <value>
                <fullName>15 - Calculéo A</fullName>
            </value>
            <value>
                <fullName>15 - Calculéo B</fullName>
            </value>
            <value>
                <fullName>15 - Calculéo C</fullName>
            </value>
            <value>
                <fullName>15 - Calculéo D</fullName>
            </value>
            <value>
                <fullName>15 - Campagne Marketing</fullName>
            </value>
            <value>
                <fullName>15 - comprendre choisir</fullName>
            </value>
            <value>
                <fullName>15 - Keltravo</fullName>
            </value>
            <value>
                <fullName>15 - presse</fullName>
            </value>
            <value>
                <fullName>15 - Quotatis</fullName>
            </value>
            <value>
                <fullName>15 - Radio</fullName>
            </value>
            <value>
                <fullName>15 - TV</fullName>
            </value>
            <value>
                <fullName>17 - JPO</fullName>
            </value>
            <value>
                <fullName>20 - passage magasin</fullName>
            </value>
            <value>
                <fullName>26 - Telepro magasin</fullName>
            </value>
            <value>
                <fullName>34 - vente personnel</fullName>
            </value>
            <value>
                <fullName>35 - vente personnel StGobain</fullName>
            </value>
            <value>
                <fullName>36 - Prescription</fullName>
            </value>
            <value>
                <fullName>43 - Foire</fullName>
            </value>
            <value>
                <fullName>44 - Affiliation</fullName>
            </value>
            <value>
                <fullName>44 - Batiweb</fullName>
            </value>
            <value>
                <fullName>44 - Formulaire site KparK</fullName>
            </value>
            <value>
                <fullName>44 - Formulaire site QTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>