force-app/main/default/objects/Import__c/fields/chantierExistant__c.field-meta.xml
<CustomField>
    <fullName>chantierExistant__c</fullName>
    <formula>IF(
OR(
!ISBLANK(rueChantier__c),
!ISBLANK(codePostalChantier__c),
!ISBLANK(villeChantier__c),
!ISBLANK(departementChantier__c),
!ISBLANK(paysChantier__c),
!ISPICKVAL(typeHabitation__c, &apos;&apos;)
),
True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chantier existant</label>
    <type>Checkbox</type>
</CustomField>