force-app/main/default/objects/Import__c/fields/civiliteCompte__c.field-meta.xml
<CustomField>
    <fullName>civiliteCompte__c</fullName>
    <label>Civilité (Compte)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M.</fullName>
                <default>true</default>
                <label>M.</label>
            </value>
            <value>
                <fullName>Mme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>