force-app/main/default/objects/Import__c/fields/classeException__c.field-meta.xml
<CustomField>
    <fullName>classeException__c</fullName>
    <label>Classe d&apos;exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>