force-app/main/default/objects/Import__c/fields/codeAccesChantier__c.field-meta.xml
<CustomField>
    <fullName>codeAccesChantier__c</fullName>
    <label>Code d&apos;accès (Chantier)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>