force-app/main/default/objects/Import__c/fields/codeAccesCompte__c.field-meta.xml
<CustomField>
    <fullName>codeAccesCompte__c</fullName>
    <label>Code d&apos;accès (Compte)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>