force-app/main/default/objects/Import__c/fields/codeCommune__c.field-meta.xml
<CustomField>
    <fullName>codeCommune__c</fullName>
    <label>Code Commune</label>
    <length>6</length>
    <type>Text</type>
</CustomField>