force-app/main/default/objects/Import__c/fields/codePostalChantier__c.field-meta.xml
<CustomField>
    <fullName>codePostalChantier__c</fullName>
    <label>Code postal (Chantier)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>