force-app/main/default/objects/Import__c/fields/codePostalCompte__c.field-meta.xml
<CustomField>
    <fullName>codePostalCompte__c</fullName>
    <label>Code postal (Compte)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>