force-app/main/default/objects/Import__c/fields/compte__c.field-meta.xml
<CustomField>
    <fullName>compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>comptes</relationshipName>
    <type>Lookup</type>
</CustomField>