force-app/main/default/objects/Import__c/fields/couplePresent__c.field-meta.xml
<CustomField>
    <fullName>couplePresent__c</fullName>
    <description>Couple présent lors du rendez-vous</description>
    <label>Couple présent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>A confirmer</fullName>
            </value>
            <value>
                <fullName>Seul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>