force-app/main/default/objects/Import__c/fields/dateDeProspection__c.field-meta.xml
<CustomField>
    <fullName>dateDeProspection__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date De Prospection</label>
    <type>Date</type>
</CustomField>