force-app/main/default/objects/Import__c/fields/dateExpiration__c.field-meta.xml
<CustomField>
    <fullName>dateExpiration__c</fullName>
    <label>Date d&apos;expiration</label>
    <type>Date</type>
</CustomField>