force-app/main/default/objects/Import__c/fields/dateFichierSource__c.field-meta.xml
<CustomField>
    <fullName>dateFichierSource__c</fullName>
    <label>Date d&apos;achat/location du fichier</label>
    <type>Date</type>
</CustomField>