force-app/main/default/objects/Import__c/fields/dateIntegration__c.field-meta.xml
<CustomField>
    <fullName>dateIntegration__c</fullName>
    <label>Date d&apos;intégration</label>
    <type>DateTime</type>
</CustomField>