force-app/main/default/objects/Import__c/fields/dateRDV__c.field-meta.xml
<CustomField>
    <fullName>dateRDV__c</fullName>
    <description>Date/heure de début du rendez-vous</description>
    <label>Date/Heure</label>
    <type>DateTime</type>
</CustomField>