force-app/main/default/objects/Import__c/fields/delaiIntegration__c.field-meta.xml
<CustomField>
    <fullName>delaiIntegration__c</fullName>
    <formula>DATEVALUE(dateIntegration__c) - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai intégration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>