force-app/main/default/objects/Import__c/fields/departementChantier__c.field-meta.xml
<CustomField>
    <fullName>departementChantier__c</fullName>
    <label>Département/Région (Chantier)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>