force-app/main/default/objects/Import__c/fields/departementCompte__c.field-meta.xml
<CustomField>
    <fullName>departementCompte__c</fullName>
    <label>Département/Région (Compte)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>