force-app/main/default/objects/Import__c/fields/emailCompte__c.field-meta.xml
<CustomField>
    <fullName>emailCompte__c</fullName>
    <label>Email (Compte)</label>
    <type>Email</type>
</CustomField>