force-app/main/default/objects/Import__c/fields/etageChantier__c.field-meta.xml
<CustomField>
    <fullName>etageChantier__c</fullName>
    <label>Etage (Chantier)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>