force-app/main/default/objects/Import__c/fields/etageCompte__c.field-meta.xml
<CustomField>
    <fullName>etageCompte__c</fullName>
    <label>Etage (Compte)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>