force-app/main/default/objects/Import__c/fields/faxCompte__c.field-meta.xml
<CustomField>
    <fullName>faxCompte__c</fullName>
    <label>FAX (Compte)</label>
    <type>Phone</type>
</CustomField>