force-app/main/default/objects/Import__c/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Google Click ID pour la conversion du client</description>
    <externalId>true</externalId>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>