force-app/main/default/objects/Import__c/fields/GDPR_dateExpiration__c.field-meta.xml
<CustomField>
    <fullName>GDPR_dateExpiration__c</fullName>
    <description>Date (excluse) à partir de laquelle l’enregistrement doit être supprimer</description>
    <formula>IF( ISBLANK(dateIntegration__c) , ADDMONTHS(CreatedDate, 3), dateIntegration__c + 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date expiration (GDPR)</label>
    <type>Date</type>
</CustomField>