force-app/main/default/objects/Import__c/fields/GDPR_erreurs__c.field-meta.xml
<CustomField>
    <fullName>GDPR_erreurs__c</fullName>
    <description>Historique des échecs</description>
    <label>Erreurs (GDPR)</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>