force-app/main/default/objects/Import__c/fields/hasError__c.field-meta.xml
<CustomField>
    <fullName>hasError__c</fullName>
    <formula>OR(
  NOT(ISBLANK(classeException__c)),
  NOT(ISBLANK(messageException__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>En erreur</label>
    <type>Checkbox</type>
</CustomField>