force-app/main/default/objects/Import__c/fields/identificationSummary__c.field-meta.xml
<CustomField>
    <fullName>identificationSummary__c</fullName>
    <formula>Name + &apos; - &apos; +  TRIM(LOWER(prenomCompte__c) + &apos; &apos; + UPPER(nomCompte__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Résumé (Identification)</label>
    <type>Text</type>
</CustomField>