force-app/main/default/objects/Import__c/fields/idEulerian__c.field-meta.xml
<CustomField>
    <fullName>idEulerian__c</fullName>
    <label>ID Eulerian</label>
    <length>30</length>
    <type>Text</type>
</CustomField>