force-app/main/default/objects/Import__c/fields/idInterneFournisseurFichierSource__c.field-meta.xml
<CustomField>
    <fullName>idInterneFournisseurFichierSource__c</fullName>
    <label>ID interne du fournisseur du fichier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>