force-app/main/default/objects/Import__c/fields/IdRDV__c.field-meta.xml
<CustomField>
    <fullName>IdRDV__c</fullName>
    <label>Rendez-vous</label>
    <length>20</length>
    <type>Text</type>
</CustomField>