force-app/main/default/objects/Import__c/fields/integrable__c.field-meta.xml
<CustomField>
    <fullName>integrable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Intégrable</label>
    <type>Checkbox</type>
</CustomField>