force-app/main/default/objects/Import__c/fields/iris__c.field-meta.xml
<CustomField>
    <fullName>iris__c</fullName>
    <description>CRM-477 : Gestion de sectorisation et hors secteur</description>
    <label>Iris</label>
    <length>9</length>
    <type>Text</type>
</CustomField>