force-app/main/default/objects/Import__c/fields/journalIntegration__c.field-meta.xml
<CustomField>
    <fullName>journalIntegration__c</fullName>
    <label>Journal d&apos;intégration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>