force-app/main/default/objects/Import__c/fields/Localisation__c.field-meta.xml
<CustomField>
    <fullName>Localisation__c</fullName>
    <description>CRM-477 : Gestion de sectorisation et hors secteur</description>
    <label>Localisation</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>