force-app/main/default/objects/Import__c/fields/locataire__c.field-meta.xml
<CustomField>
    <fullName>locataire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locataire</label>
    <type>Checkbox</type>
</CustomField>