force-app/main/default/objects/Import__c/fields/materiauxCoulissant__c.field-meta.xml
<CustomField>
    <fullName>materiauxCoulissant__c</fullName>
    <label>Matériaux coulissant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>Bois</fullName>
            </value>
            <value>
                <fullName>Aluminium</fullName>
            </value>
            <value>
                <fullName>Bois/Alu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>