force-app/main/default/objects/Import__c/fields/materiauxIsolationCombles__c.field-meta.xml
<CustomField>
    <fullName>materiauxIsolationCombles__c</fullName>
    <label>Matériaux isolation des combles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laine de roche</fullName>
            </value>
            <value>
                <fullName>Laine de verre</fullName>
            </value>
            <value>
                <fullName>Ouate de cellulose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>