force-app/main/default/objects/Import__c/fields/materiauxMoustiquaire__c.field-meta.xml
<CustomField>
    <fullName>materiauxMoustiquaire__c</fullName>
    <label>Matériaux moustiquaire</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enroulables</fullName>
            </value>
            <value>
                <fullName>Plissées</fullName>
            </value>
            <value>
                <fullName>Fixes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>