force-app/main/default/objects/Import__c/fields/materiauxPergola__c.field-meta.xml
<CustomField>
    <fullName>materiauxPergola__c</fullName>
    <label>Matériaux pergola</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aluminium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>