force-app/main/default/objects/Import__c/fields/materiauxPorteBlindee__c.field-meta.xml
<CustomField>
    <fullName>materiauxPorteBlindee__c</fullName>
    <label>Matériaux porte blindée</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Palière</fullName>
            </value>
            <value>
                <fullName>Pavillonnaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>