force-app/main/default/objects/Import__c/fields/materiauxPorteEntree__c.field-meta.xml
<CustomField>
    <fullName>materiauxPorteEntree__c</fullName>
    <label>Matériaux porte d&apos;entrée</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>Bois</fullName>
            </value>
            <value>
                <fullName>Aluminium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>