force-app/main/default/objects/Import__c/fields/materiauxPorteGarage__c.field-meta.xml
<CustomField>
    <fullName>materiauxPorteGarage__c</fullName>
    <label>Matériaux porte de garage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sectionnelles</fullName>
            </value>
            <value>
                <fullName>Enroulables</fullName>
            </value>
            <value>
                <fullName>Battantes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>