force-app/main/default/objects/Import__c/fields/materiauxPorteInterieur__c.field-meta.xml
<CustomField>
    <fullName>materiauxPorteInterieur__c</fullName>
    <label>Matériaux porte d&apos;intérieur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>