force-app/main/default/objects/Import__c/fields/materiauxPorteService__c.field-meta.xml
<CustomField>
    <fullName>materiauxPorteService__c</fullName>
    <label>Matériaux porte de service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>Bois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>