force-app/main/default/objects/Import__c/fields/materiauxStoreBanne__c.field-meta.xml
<CustomField>
    <fullName>materiauxStoreBanne__c</fullName>
    <label>Matériaux store banne</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aucun</fullName>
                <default>true</default>
                <label>Aucun</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>