force-app/main/default/objects/Import__c/fields/messageException__c.field-meta.xml
<CustomField>
    <fullName>messageException__c</fullName>
    <label>Message d&apos;exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>