force-app/main/default/objects/Import__c/fields/methodeGeocodage__c.field-meta.xml
<CustomField>
    <fullName>methodeGeocodage__c</fullName>
    <description>CRM-477 : Gestion de sectorisation et hors secteur</description>
    <label>Méthode de géocodage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>