force-app/main/default/objects/Import__c/fields/nomCompte__c.field-meta.xml
<CustomField>
    <fullName>nomCompte__c</fullName>
    <label>Nom (Compte)</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>