force-app/main/default/objects/Import__c/fields/nomFichierSource__c.field-meta.xml
<CustomField>
    <fullName>nomFichierSource__c</fullName>
    <label>Nom du fichier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>