force-app/main/default/objects/Import__c/fields/numeroParrain__c.field-meta.xml
<CustomField>
    <fullName>numeroParrain__c</fullName>
    <label>Numéro parrain</label>
    <length>30</length>
    <type>Text</type>
</CustomField>