force-app/main/default/objects/Import__c/fields/observationsComplementaires__c.field-meta.xml
<CustomField>
    <fullName>observationsComplementaires__c</fullName>
    <label>Observations complémentaires</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>