force-app/main/default/objects/Import__c/fields/optinAdresseEmailKparK__c.field-meta.xml
<CustomField>
    <fullName>optinAdresseEmailKparK__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Optin adresse email (K par K)</label>
    <type>Checkbox</type>
</CustomField>