force-app/main/default/objects/Import__c/fields/optinAdresseEmailPartenaire__c.field-meta.xml
<CustomField>
    <fullName>optinAdresseEmailPartenaire__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Optin adresse email (Partenaire)</label>
    <type>Checkbox</type>
</CustomField>