force-app/main/default/objects/Import__c/fields/optinSMSKparK__c.field-meta.xml
<CustomField>
    <fullName>optinSMSKparK__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Optin SMS (K par K)</label>
    <type>Checkbox</type>
</CustomField>