force-app/main/default/objects/Import__c/fields/optinSMSPartenaire__c.field-meta.xml
<CustomField>
    <fullName>optinSMSPartenaire__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Optin SMS (Partenaire)</label>
    <type>Checkbox</type>
</CustomField>