force-app/main/default/objects/Import__c/fields/optinTelephoneDomicileKparK__c.field-meta.xml
<CustomField>
    <fullName>optinTelephoneDomicileKparK__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Optin téléphone domicile (K par K)</label>
    <type>Checkbox</type>
</CustomField>