force-app/main/default/objects/Import__c/fields/optinTelephoneDomicilePartenaire__c.field-meta.xml
<CustomField>
    <fullName>optinTelephoneDomicilePartenaire__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Optin téléphone domicile (Partenaire)</label>
    <type>Checkbox</type>
</CustomField>