force-app/main/default/objects/Import__c/fields/optinTelephoneMobileKparK__c.field-meta.xml
<CustomField>
    <fullName>optinTelephoneMobileKparK__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Optin téléphone mobile (K par K)</label>
    <type>Checkbox</type>
</CustomField>