force-app/main/default/objects/Import__c/fields/optinTelephoneMobilePartenaire__c.field-meta.xml
<CustomField>
    <fullName>optinTelephoneMobilePartenaire__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Optin téléphone mobile (Partenaire)</label>
    <type>Checkbox</type>
</CustomField>