force-app/main/default/objects/Import__c/fields/paysChantier__c.field-meta.xml
<CustomField>
    <fullName>paysChantier__c</fullName>
    <label>Pays (Chantier)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>