force-app/main/default/objects/Import__c/fields/paysCompte__c.field-meta.xml
<CustomField>
    <fullName>paysCompte__c</fullName>
    <label>Pays (Compte)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>