force-app/main/default/objects/Import__c/fields/periodePrevisionnelleInstallation__c.field-meta.xml
<CustomField>
    <fullName>periodePrevisionnelleInstallation__c</fullName>
    <label>Réalisation des travaux</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 3 mois</fullName>
            </value>
            <value>
                <fullName>4 - 7 mois</fullName>
            </value>
            <value>
                <fullName>8 - 12 mois</fullName>
            </value>
            <value>
                <fullName>+ d&apos;un an</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>