force-app/main/default/objects/Import__c/fields/precisions__c.field-meta.xml
<CustomField>
    <fullName>precisions__c</fullName>
    <description>Précisions sur le rendez-vous</description>
    <label>Précisions</label>
    <type>TextArea</type>
</CustomField>