force-app/main/default/objects/Import__c/fields/prenomCompte__c.field-meta.xml
<CustomField>
    <fullName>prenomCompte__c</fullName>
    <label>Prénom (Compte)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>