force-app/main/default/objects/Import__c/fields/prospectionId__c.field-meta.xml
<CustomField>
    <fullName>prospectionId__c</fullName>
    <label>Prospection Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>