force-app/main/default/objects/Import__c/fields/quantiteCarport__c.field-meta.xml
<CustomField>
    <fullName>quantiteCarport__c</fullName>
    <label>Quantité carport</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>