force-app/main/default/objects/Import__c/fields/quantiteCoulissant__c.field-meta.xml
<CustomField>
    <fullName>quantiteCoulissant__c</fullName>
    <label>Quantité coulissant</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>