force-app/main/default/objects/Import__c/fields/quantiteFenetre__c.field-meta.xml
<CustomField>
    <fullName>quantiteFenetre__c</fullName>
    <label>Quantité fenêtre</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>