force-app/main/default/objects/Import__c/fields/quantiteIsolationCombles__c.field-meta.xml
<CustomField>
    <fullName>quantiteIsolationCombles__c</fullName>
    <label>Quantité isolation des combles</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>