force-app/main/default/objects/Import__c/fields/quantiteMoustiquaire__c.field-meta.xml
<CustomField>
    <fullName>quantiteMoustiquaire__c</fullName>
    <label>Quantité moustiquaire</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>