force-app/main/default/objects/Import__c/fields/quantitePergola__c.field-meta.xml
<CustomField>
    <fullName>quantitePergola__c</fullName>
    <label>Quantité pergola</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>