force-app/main/default/objects/Import__c/fields/quantitePersienne__c.field-meta.xml
<CustomField>
    <fullName>quantitePersienne__c</fullName>
    <label>Quantité persienne</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>