force-app/main/default/objects/Import__c/fields/quantitePortail__c.field-meta.xml
<CustomField>
    <fullName>quantitePortail__c</fullName>
    <label>Quantité portail</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>