force-app/main/default/objects/Import__c/fields/quantitePorteBlindee__c.field-meta.xml
<CustomField>
    <fullName>quantitePorteBlindee__c</fullName>
    <label>Quantité porte blindée</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>